@@ -1,3 +1,8 @@
+2006-08-28  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/winicon/icoload.c: avoid crashing on newer versions of
+	the winicon file format (bug #352899).
+
 2006-08-28  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpairbrushtool.c
